# kriging-wasm

./: .gitignore  .prettierrc.js  LICENSE  README.md  package.json
.trae/rules/: webassembly.md
example/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
example/src/: constant.ts  main.css  main.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/kriging/: mod.rs  utils.rs
wasm/tests/: web.rs
