[package]
name = "kriging-wasm"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
tsify-next = "0.5"
oxigdal-analytics = "0.1"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
uuid = { version = "1.21", features = ["v4", "v7", "js"] }

[profile.release]
opt-level = "s"
lto = true
