[package]
name = "kriging-wasm"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
tsify-next = "0.5"
ndarray = "0.17"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
